style.css
@font-face {
  font-family: "tbc-bold";
  src: url("./fonts/TBCXBold.woff2");
}
@font-face {
  font-family: "tbc-medium";
  src: url("./fonts/TBCXMedium.woff2");
}
@font-face {
  font-family: "tbc-regular";
  src: url("./fonts/TBCXRegular.woff2");
}
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}
body {
  color: #555f62;
  background-color: #f9fafa;
  font-size: 14px;
  line-height: 1.7;
  font-family: tbc-bold;
}
/* start navigation */
header {
  z-index: 100;
  height: 80px;
  background-color: #fff;
  border-bottom: 1px solid #eef1f1;
  position: fixed;
  top: 0;
  bottom: auto;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
}
nav {
  display: flex;
  z-index: 103;
  width: 100%;
  height: 100%;
  max-width: 1110px;
  justify-content: space-around !important;
  /* margin-right: auto; */
  position: relative;
  gap: 40px;
}
.tbc-logo {
  display: flex;
  align-items: center;
  cursor: pointer;
  justify-content: center;
}
ul {
  list-style-type: none;
  display: flex;
  gap: 30px;
  font-size: 14px;
}
ul li {
  cursor: pointer;
}
li {
  position: relative;
  background: #fff;
  &::before {
    content: attr(data);
    display: block;
  }
  &::after {
    content: "";
    display: block;
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    top: 54px;
    margin: auto;
    justify-content: center;
    height: 2px;
    background-color: #182cc0;
    transition: width 500ms;
    width: 0;
  }
  &:hover {
    &::after {
      width: 100%;
    }
  }
}

.header-menu {
  display: flex;
  align-items: center;
  gap: 30px;
  font-family: tbc-regular;
  font-size: 16px;
  width: 479px;
  height: 100%;
}

.lang-toggle {
  font-family: tbc-bold;
  display: flex;
  align-items: center;
  gap: 5px;
  justify-content: flex-end;
  cursor: pointer;
  border: 1px solid #fff;
  padding: 6px 2.3px;
  transition: 0.3s;
  /* width: 100%; */
}
.lang-toggle:hover {
  background-color: #eef1f1;
  border-radius: 5px;
  transition: 0.5s;
}

.subscribe-products {
  color: #182cc0;
  align-items: center;
  font-size: 14px;
  font-family: tbc-bold;
  line-height: 1.4;
  display: flex;
  gap: 10px;
  width: 100%;
  cursor: pointer;
  transition: 0.3s;
}
.subscribe-products:hover {
  color: #3295ce;
  transition: 0.5s;
}
.search {
  display: flex;
  align-items: center;
  gap: 20px;
  padding-top: 10px;
}
.search-icon {
  cursor: pointer;
  transition: 0.3s;
}
.search-icon:hover {
  color: #3295ce;
  transition: 0.5s;
}
/* end navigation */

/* start nav responsive */
@media only screen and (max-width: 767px) {
  .header-menu {
    display: none;
  }
  .concept-text {
    display: none;
  }

  .tbc-logo svg {
    width: 500px !important;
    height: 55px;
  }
  .tbc-logo {
    width: 50%;
    margin-left: 10%;
  }
  .cls-1 {
    display: none;
  }
}

/* end nav responsive */

/* start dropdown menu */
.dropdown-container {
  width: 100%;
  position: fixed;
  top: 110px;
  left: 150px;
  display: flex;
  z-index: 99;
}
.dropdown-container a:hover {
  color: #182cc0;
  transition: 0.5s;
}
.left-side {
  display: flex;
  flex-direction: column;
  gap: 20px;
}
.arrow {
  color: #182cc0;
  text-transform: uppercase;
  font-size: 14px;
  font-family: tbc-bold;
  line-height: 1.4;
  display: flex;
  gap: 5px;
  transition: 0.3s;
  cursor: pointer;
}
.arrow:hover {
  color: #3295ce;
  transition: 0.5s;
}
.right-side {
  display: flex;
  position: relative;
  left: 80px;
  top: 0;
}
.first-dropdown-menu {
  display: flex;
  flex-direction: column;
  gap: 20px;
}
a {
  text-decoration: none;
  color: #555f62;
  font-family: tbc-medium;
  cursor: pointer;
  transition: 0.3s;
}
.first {
  width: 50%;
}
.second-dropdown-menu {
  display: flex;
  flex-direction: column;
  gap: 20px;
  position: relative;
  right: 50px;
}
.third-dropdown-menu {
  display: flex;
  flex-direction: column;
  gap: 20px;
  position: relative;
  left: 70px;
}
.concept-button {
  width: 50%;
}
/* 
.dropdown-container {
  display: none;
}
.dropdown-container.show {
  display: block;
  transition: all 0.3s ease-in-out;
} */
.card-dropdown-menu,
.first-dropdown-menu,
.second-dropdown-menu,
.third-dropdown-menu {
  display: none;
}
.card-dropdown-menu.show {
  display: block;
  transition: all 0.3s ease-in-out;
}
.first-dropdown-menu.show {
  display: flex;
  transition: all 0.3s ease-in-out;
}

.second-dropdown-menu.show {
  display: flex;
  transition: all 0.3s ease-in-out;
  position: relative;
  left: 130px;
}
.third-dropdown-menu.show {
  display: flex;
  transition: all 0.3s ease-in-out;
  position: relative;
  width: 100%;
  left: 350px;
}
.hide {
  display: none;
}
/* end dropdown menu */
main {
  position: relative;
  display: flex;
  flex-direction: column;
}
/* main start */
.main-text {
  color: #555f62;
  width: 50%;
  font-family: tbc-regular;
  font-size: 12px;
}
.main-container {
  position: absolute;
  display: flex;
  width: 100%;
  margin-top: 100px;
  margin-left: 12%;
}

.banner {
  position: relative;
  /* top: 150px; */
  margin-top: 150px;
}
.img-wrapper img {
  min-height: 360px;
  border-radius: 8px;
  position: relative;
  /* left: 180px; */
  object-fit: cover;
  /* background-image: linear-gradient(15deg, #001682, #3240e5); */
  filter: brightness(60%);
  width: 100%;
  height: 376px;
}
.img-wrapper {
  width: 100%;
  max-width: 1110px;
  margin-left: auto;
  margin-right: auto;
  /* overflow: hidden; */
}

.text-banner {
  position: absolute;
  top: 30%;
  left: 20%;
  color: #fff;
  display: flex;
  flex-direction: column;
  gap: 20px;
}
.text-banner p {
  font-family: tbc-regular;
  width: 70%;
}
.sub-button {
  background-color: #182cc0;
  width: 180px;
  padding: 15px 20px;
  display: flex;
  gap: 5px;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  box-shadow: black;
  z-index: 99;
  transition: 0.3s ease-in;
}
.subscribe-btn {
  color: #fff;
}
/* ... */

